-- ============================================================
-- schema.sql - Esquema base del proyecto Fullpetro
-- Motor: PostgreSQL
-- Contiene SOLO la estructura de seguridad que el esqueleto
-- del backend necesita para arrancar (auth, perfiles, permisos,
-- subsistemas, clases, metodos y transacciones).
-- Las tablas de negocio se agregan junto a los objetos de negocio.
-- ============================================================

BEGIN;

-- ------------------------------------------------------------
-- Dominios de validacion institucional
-- ------------------------------------------------------------
CREATE DOMAIN email_address AS VARCHAR(150)
    CHECK (VALUE ~* '^[A-Z0-9._%+\-]+@[A-Z0-9.\-]+\.[A-Z]{2,}$');

CREATE DOMAIN document_identifier AS VARCHAR(30)
    CHECK (VALUE ~ '^[A-Za-z0-9\-]{5,30}$');

CREATE DOMAIN phone_number AS VARCHAR(30)
    CHECK (VALUE ~ '^\+?[0-9 ()\-]{7,20}$');

-- ------------------------------------------------------------
-- Persona (referenciada por usuario)
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS person (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    document_id document_identifier NOT NULL,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    phone phone_number,
    degree VARCHAR(150),
    address TEXT,
    birth_date DATE,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    deleted_at TIMESTAMPTZ,
    CONSTRAINT uq_person_document_id UNIQUE (document_id),
    CONSTRAINT ck_person_first_name_not_blank CHECK (btrim(first_name) <> ''),
    CONSTRAINT ck_person_last_name_not_blank CHECK (btrim(last_name) <> '')
);

-- ------------------------------------------------------------
-- Usuario
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS "user" (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(60) NOT NULL,
    email email_address,
    password_hash TEXT NOT NULL,
    is_solvency BOOLEAN NOT NULL DEFAULT TRUE,
    is_active BOOLEAN NOT NULL DEFAULT TRUE,
    person_id BIGINT REFERENCES person(id) ON DELETE SET NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    deleted_at TIMESTAMPTZ,
    CONSTRAINT ck_user_name_not_blank CHECK (btrim(name) <> ''),
    CONSTRAINT ck_user_password_hash_not_blank CHECK (btrim(password_hash) <> '')
);

-- ------------------------------------------------------------
-- Perfiles y asignacion usuario-perfil
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS profile (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    description TEXT,
    is_active BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT uq_profile_name UNIQUE (name),
    CONSTRAINT ck_profile_name_not_blank CHECK (btrim(name) <> '')
);

CREATE TABLE IF NOT EXISTS user_profile (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES "user"(id) ON DELETE RESTRICT,
    profile_id BIGINT NOT NULL REFERENCES profile(id) ON DELETE RESTRICT,
    CONSTRAINT uq_user_profile UNIQUE (user_id, profile_id)
);

-- ------------------------------------------------------------
-- Matriz de permisos: subsistema -> clase -> metodo -> perfil
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS subsystem (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    description TEXT,
    CONSTRAINT uq_subsystem_name UNIQUE (name),
    CONSTRAINT ck_subsystem_name_not_blank CHECK (btrim(name) <> '')
);

CREATE TABLE IF NOT EXISTS "class" (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    description TEXT,
    CONSTRAINT uq_class_name UNIQUE (name),
    CONSTRAINT ck_class_name_not_blank CHECK (btrim(name) <> '')
);

CREATE TABLE IF NOT EXISTS "method" (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    description TEXT,
    CONSTRAINT uq_method_name UNIQUE (name),
    CONSTRAINT ck_method_name_not_blank CHECK (btrim(name) <> '')
);

CREATE TABLE IF NOT EXISTS subsystem_class (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    subsystem_id BIGINT NOT NULL REFERENCES subsystem(id) ON DELETE RESTRICT,
    class_id BIGINT NOT NULL REFERENCES "class"(id) ON DELETE RESTRICT,
    CONSTRAINT uq_subsystem_class UNIQUE (subsystem_id, class_id)
);

CREATE TABLE IF NOT EXISTS class_method (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    class_id BIGINT NOT NULL REFERENCES "class"(id) ON DELETE RESTRICT,
    method_id BIGINT NOT NULL REFERENCES "method"(id) ON DELETE RESTRICT,
    CONSTRAINT uq_class_method UNIQUE (class_id, method_id)
);

CREATE TABLE IF NOT EXISTS method_profile (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    method_id BIGINT NOT NULL REFERENCES "method"(id) ON DELETE RESTRICT,
    profile_id BIGINT NOT NULL REFERENCES profile(id) ON DELETE RESTRICT,
    CONSTRAINT uq_method_profile UNIQUE (method_id, profile_id)
);

-- ------------------------------------------------------------
-- Transaccion (registro unico por alcance subsistema-clase-metodo)
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS "transaction" (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    subsystem_id BIGINT NOT NULL REFERENCES subsystem(id) ON DELETE RESTRICT,
    class_id BIGINT NOT NULL REFERENCES "class"(id) ON DELETE RESTRICT,
    method_id BIGINT NOT NULL REFERENCES "method"(id) ON DELETE RESTRICT,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT uq_transaction_scope UNIQUE (subsystem_id, class_id, method_id)
);

-- ------------------------------------------------------------
-- Catalogo de menus y opciones (navegacion por perfil)
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS "option" (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    description TEXT,
    CONSTRAINT uq_option_name UNIQUE (name),
    CONSTRAINT ck_option_name_not_blank CHECK (btrim(name) <> '')
);

CREATE TABLE IF NOT EXISTS option_profile (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    profile_id BIGINT NOT NULL REFERENCES profile(id) ON DELETE RESTRICT,
    option_id BIGINT NOT NULL REFERENCES "option"(id) ON DELETE RESTRICT,
    CONSTRAINT uq_option_profile UNIQUE (profile_id, option_id)
);

CREATE TABLE IF NOT EXISTS menu (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    description TEXT,
    subsystem_id BIGINT NOT NULL REFERENCES subsystem(id) ON DELETE RESTRICT,
    CONSTRAINT uq_menu_name_subsystem UNIQUE (name, subsystem_id),
    CONSTRAINT ck_menu_name_not_blank CHECK (btrim(name) <> '')
);

CREATE TABLE IF NOT EXISTS option_menu (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    option_id BIGINT NOT NULL REFERENCES "option"(id) ON DELETE RESTRICT,
    menu_id BIGINT NOT NULL REFERENCES menu(id) ON DELETE RESTRICT,
    CONSTRAINT uq_option_menu UNIQUE (option_id, menu_id)
);

COMMIT;
